nobase_include_HEADERS = \
    dbustl-1/Config \
    dbustl-1/dbustl \
    dbustl-1/ObjectProxy \
    dbustl-1/Connection \
    dbustl-1/DBusException \
    dbustl-1/EventLoopIntegration \
    dbustl-1/Message \
    dbustl-1/types/Serialization \
    dbustl-1/types/Basic \
    dbustl-1/types/StdTools \
    dbustl-1/types/Struct \
    dbustl-1/types/list \
    dbustl-1/types/vector \
    dbustl-1/types/set \
    dbustl-1/types/map \
    dbustl-1/types/tuple \
    dbustl-1/types/unordered_set \
    dbustl-1/types/array

if HAVE_GLIB
nobase_include_HEADERS += \
   	dbustl-1/GlibEventLoopIntegration
endif
