nobase_include_HEADERS = \
    dbustl-1/Config \
    dbustl-1/dbustl \
    dbustl-1/Interface \
    dbustl-1/ObjectProxy \
    dbustl-1/DBusObject \
    dbustl-1/Connection \
    dbustl-1/DBusException \
    dbustl-1/EventLoopIntegration \
    dbustl-1/Message \
    dbustl-1/types/Serialization \
    dbustl-1/types/Basic \
    dbustl-1/types/stl/Tools \
    dbustl-1/types/stl/Struct \
    dbustl-1/types/stl/list \
    dbustl-1/types/stl/vector \
    dbustl-1/types/stl/deque \
    dbustl-1/types/stl/set \
    dbustl-1/types/stl/map \
    dbustl-1/types/stl/tuple \
    dbustl-1/types/stl/unordered_set \
    dbustl-1/types/stl/unordered_map \
    dbustl-1/types/stl/array

if HAVE_GLIB
nobase_include_HEADERS += \
   	dbustl-1/GlibEventLoopIntegration
endif
