nobase_include_HEADERS = \
    dbustl-1/Config \
    dbustl-1/dbustl \
    dbustl-1/ServerProxy \
    dbustl-1/Connection \
    dbustl-1/DBusException \
    dbustl-1/EventLoopIntegration \
    dbustl-1/Message \
    dbustl-1/types/Serialization \
    dbustl-1/types/Basic \
    dbustl-1/types/Tools \
    dbustl-1/types/StdTools \
    dbustl-1/types/Struct \
    dbustl-1/types/list \
    dbustl-1/types/vector \
    dbustl-1/types/set \
    dbustl-1/types/map

if HAVE_GLIB
nobase_include_HEADERS += \
	dbustl-1/Glib \
   	dbustl-1/GlibEventLoopIntegration
endif
